<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewVisitor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            layout="@layout/toolbar"/>
        <TextView
            android:id="@+id/txtenterPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/purpose"
            android:textColor="@color/signInPink"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterPurpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp" />


        <TextView
            android:id="@+id/txtenterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textColor="@color/signInPink"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp" />


        <TextView
            android:id="@+id/txtenterPhoneNUmber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/phone"
            android:textColor="@color/signInPink"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterPhoneNUmber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="phone"
            android:background="@drawable/edittext_border"
            android:padding="10dp" />


        <TextView
            android:id="@+id/txtenterNoOfPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_of_person"
            android:textColor="@color/signInPink"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/enterNoOfPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:background="@drawable/edittext_border"
            android:padding="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/date"
            android:textColor="@color/signInPink"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/enterDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/edittext_border"
            android:padding="10dp" />



        <TextView
            android:id="@+id/txtAddImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:text="@string/add_image_1"
            android:background="@drawable/edittext_border"
            android:textColor="@color/signInBlue"
            android:textSize="15sp" />



        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            android:visibility="gone"
            android:background="@drawable/edittext_border"
            android:textSize="18sp"
            android:textColor="@color/signInPink"/>



        <TextView
            android:id="@+id/txtAddImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_image_2"
            android:background="@drawable/edittext_border"
            android:textColor="@color/signInBlue"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp"
            android:visibility="gone"
            android:background="@drawable/edittext_border"
            android:textSize="18sp"
            android:textColor="@color/signInPink"/>

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/rounded_custom_blue_button"
            android:padding="5dp"
            android:text="@string/save"
            android:layout_margin="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>


</ScrollView>